[package]
name = "test_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.1.0"
log = "0.4.17"
env_logger = "0.9.0"
tokio = { version = "1.20.1", features = ["full"] }
pretty_env_logger = "0.4.0"
eframe = "0.18.0"
